--- a/msg.html
+++ b/msg.html
@@ -34,12 +34,12 @@
       </div>
     </nav>
 
-    <div class="container" style="margin-top: 100px;">
+    <div class="container" style="margin-top: 100px">
         <div class="row clearfix">
             <div class="col-lg-12">                    
                 <button class="text-success border-5 border-success text-bg-light btn btn-primary d-block d-md-none mb-3" id="toggleChatList">Show</button>
 
-                <div class="card chat-app">
+                <div class="card chat-app d-flex">
 
                     <div id="plist" class="people-list chatn">
                         <div class="input-group">
@@ -50,56 +50,56 @@
                         </div>
                         <ul class="list-unstyled chat-list mt-2 mb-0">
                             <li class="clearfix">
-                                <img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="avatar">
+                                <img src="./images/user.png" alt="avatar">
                                 <div class="about">
                                     <div class="name">Vincent Porter</div>
                                     <div class="status"> <i class="fa fa-circle offline"></i> left 7 mins ago </div>                                            
                                 </div>
                             </li>
                             <li class="clearfix active">
-                                <img src="https://bootdey.com/img/Content/avatar/avatar2.png" alt="avatar">
+                                <img src="./images/user.png" alt="avatar">
                                 <div class="about">
                                     <div class="name">Aiden Chavez</div>
                                     <div class="status"> <i class="fa fa-circle online"></i> online </div>
                                 </div>
                             </li>
                             <li class="clearfix">
-                                <img src="https://bootdey.com/img/Content/avatar/avatar3.png" alt="avatar">
+                                <img src="./images/user.png" alt="avatar">
                                 <div class="about">
                                     <div class="name">Mike Thomas</div>
                                     <div class="status"> <i class="fa fa-circle online"></i> online </div>
                                 </div>
                             </li>                                    
                             <li class="clearfix">
-                                <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="avatar">
+                                <img src="./images/user.png" alt="avatar">
                                 <div class="about">
                                     <div class="name">Christian Kelly</div>
                                     <div class="status"> <i class="fa fa-circle offline"></i> left 10 hours ago </div>
                                 </div>
                             </li>
                             <li class="clearfix">
-                                <img src="https://bootdey.com/img/Content/avatar/avatar8.png" alt="avatar">
+                                <img src="./images/user.png" alt="avatar">
                                 <div class="about">
                                     <div class="name">Monica Ward</div>
                                     <div class="status"> <i class="fa fa-circle online"></i> online </div>
                                 </div>
                             </li>
                             <li class="clearfix">
-                                <img src="https://bootdey.com/img/Content/avatar/avatar3.png" alt="avatar">
+                                <img src="./images/user.png" alt="avatar">
                                 <div class="about">
                                     <div class="name">Dean Henry</div>
                                     <div class="status"> <i class="fa fa-circle offline"></i> offline since Oct 28 </div>
                                 </div>
                             </li>
                             <li class="clearfix">
-                                <img src="https://bootdey.com/img/Content/avatar/avatar3.png" alt="avatar">
+                                <img src="./images/user.png" alt="avatar">
                                 <div class="about">
                                     <div class="name">Dean Henry</div>
                                     <div class="status"> <i class="fa fa-circle offline"></i> offline since Oct 28 </div>
                                 </div>
                             </li>
                             <li class="clearfix">
-                                <img src="https://bootdey.com/img/Content/avatar/avatar3.png" alt="avatar">
+                                <img src="./images/user.png" alt="avatar">
                                 <div class="about">
                                     <div class="name">Dean Henry</div>
                                     <div class="status"> <i class="fa fa-circle offline"></i> offline since Oct 28 </div>
@@ -108,12 +108,12 @@
                         </ul>
                     </div>
 
-                    <div class="chat chatsss">
+                    <div class="chat chatsss flex-grow-1">
                         <div class="chat-header clearfix">
                             <div class="row">
                                 <div class="col-lg-6">
                                     <a href="javascript:void(0);" data-toggle="modal" data-target="#view_info">
-                                        <img src="https://bootdey.com/img/Content/avatar/avatar2.png" alt="avatar">
+                                        <img src="./images/user.png" alt="avatar">
                                     </a>
                                     <div class="chat-about">
                                         <h6 class="m-b-0">Aiden Chavez</h6>
@@ -128,7 +128,7 @@
                                 <li class="clearfix">
                                     <div class="message-data text-right">
                                         <span class="message-data-time">10:10 AM, Today</span>
-                                        <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="avatar">
+                                        <img src="./images/user.png" alt="avatar">
                                     </div>
                                     <div class="message other-message float-right"> Keep in mind that this is just a prototype. </div>
                                 </li>
