--- a/perfil.html
+++ b/perfil.html
@@ -35,10 +35,10 @@
     </nav>
     </head>
 
-    <div class="card mb-3" class="card" id="card">
+    <div class="card mb-3" style="width: 50%;margin:auto;margin-top: 100px;" id="card">
       <div class="row g-0">
         <div class="col-md-4">
-          <img src="./images/EmmaCollins.png" id="ProfilePicture" alt="...">
+          <img src="./images/EmmaCollins.png" id="ProfilePicture" style="width: 80%;" alt="Your photo">
         </div>
         <div class="col-md-8">
           <div class="card-body">
