--- a/teachers.html
+++ b/teachers.html
@@ -39,49 +39,49 @@
         <div class="container text-center">
           <div class="row g-2">
             <div class="col-6">
-              <div class="p-3"> Maths Professor </div>
-              <div class="card mx-auto"  id="teacherss">
+              <div class="p-3"><h2> Maths Professor </h2></div>
+              <div class="card" style="width:100%;height: 90%;" id="teacherss">
                 <img src="./images/JamesCarter.png" class="Professor James Carter" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Professor James Carter</h5>
                   <p class="card-text">James Carter is a dedicated Math teacher with over 10 years of experience teaching students of various levels, from high school algebra to advanced calculus. He holds a Bachelor's Degree in Mathematics from the University of Cambridge and a teaching certification. James is passionate about making math accessible and engaging, using real-world examples and interactive problem-solving techniques to help students grasp complex concepts. He specializes in exam preparation, including SATs, ACTs, and AP Math courses. In his free time, James enjoys puzzles, chess, and exploring mathematical theories in his personal studies.</p>
-                  <a href="#" class="btn btn-primary" id="button">Go chat with them</a>
+                  <a href="msg.html" class="btn btn-outline-dark" id="button">Go chat with them</a>
                 </div>
               </div>
             </div>
     
             <div class="col-6">
-              <div class="p-3"> English professor </div>
-              <div class="card mx-auto"  id="teacherss">
+              <div class="p-3"><h2> English professor </h2></div>
+              <div class="card" style="width:100%;height: 90%;" id="teacherss">
                 <img src="./images/EmmaCollins.png" class="Professor Emma Collins" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Emma Collins</h5>
                   <p class="card-text">Emma Collins is an experienced English teacher with over 8 years in the field, holding a Master's Degree in English Language and Literature from the University of Oxford. She is TEFL and CELTA certified, specializing in conversational English, academic writing, and IELTS/TOEFL preparation. Emma’s teaching philosophy is centered on creating a positive, student-focused environment where learners feel confident to express themselves. She incorporates interactive methods to ensure students develop both practical and academic English skills. Outside the classroom, Emma enjoys reading, traveling, and writing about education and language learning.</p>
-                  <a href="#" class="btn btn-primary" id="button">Go chat with them</a>
+                  <a href="msg.html" class="btn btn-outline-dark" id="button">Go chat with them</a>
                 </div>
               </div>
             </div>
 
             <div class="col-6">
-              <div class="p-3">Arts professor </div>
-              <div class="card mx-auto"  id="teacherss">
+              <div class="p-3"><h2> Arts professor </h2></div>
+              <div class="card" style="width:100%;height: 90%;" id="teacherss">
                 <img src="./images/OliverMitchell.png" class="Professor Oliver Mitchell" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Professor Oliver Mitchell</h5>
                   <p class="card-text">Oliver Mitchell is a creative Arts teacher with 6 years of experience, holding a Bachelor’s Degree in Fine Arts from the Royal College of Art. He specializes in visual arts, including painting, drawing, and sculpture, and is known for his innovative approach to teaching art. Oliver focuses on fostering creativity and self-expression in his students, encouraging them to explore various mediums and techniques. His classes often integrate art history and contemporary art trends to enrich the learning experience. Outside of teaching, Oliver enjoys creating his own artwork, visiting art galleries, and participating in local art exhibitions.</p>
-                  <a href="#" class="btn btn-primary" id="button">Go chat with them </a>
+                  <a href="msg.html" class="btn btn-outline-dark" id="button">Go chat with them </a>
                 </div>
               </div>
             </div>
     
             <div class="col-6">
-              <div class="p-3"> History professor </div>
-              <div class="card mx-auto" id="teacherss">
+              <div class="p-3"> <h2>History professor </h2></div>
+              <div class="card" style="width:100%;height: 90%;" id="teacherss">
                 <img src="./images/SophiaTurner.png" class="Professor Sophia Turner" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Professor Sophia Turner</h5>
                   <p class="card-text">Sophia Turner is an enthusiastic History teacher with 7 years of experience, holding a Master's Degree in History from the University of Edinburgh. She is passionate about bringing the past to life, making history engaging and relevant for her students. Sophia specializes in modern European history, world history, and historical analysis. Her teaching approach emphasizes critical thinking and connecting historical events to present-day issues. Outside the classroom, Sophia enjoys visiting historical sites, reading biographies, and writing articles on lesser-known historical events and figures.</p>
-                  <a href="#" class="btn btn-primary" id="button">Go chat with them</a>
+                  <a href="msg.html" class="btn btn-outline-dark" id="button">Go chat with them</a>
                 </div>
               </div>
             </div>
